# algorithm

./: .gitignore  CMakeLists.txt  delaunayTest.cpp  readme.md
delaunay/: delaunayTest.cpp
optimize/: CMakeLists.txt  lm_test.cpp  non_linear.md
test/d2f/: CMakeLists.txt  README.md  d2f.cpp
test/equal/: CMakeLists.txt  test_equal.cpp
test/filter/: CMakeLists.txt  check_filter.cpp  test_filter.cpp
test/roi/: CMakeLists.txt  test_roi.cpp
